# OOP

./: README.md
Задача_1/: CMakeLists.txt  README.md
Задача_1/src/: main.cpp
Лаба 1/src/: palindrome.cpp  palindrome.h
Лаба 1/tests/: palindrome_tests.cpp
